--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Made
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
