--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "fuse.js": "^7.1.0",
@@ -23,6 +24,7 @@
     "puppeteer": "^24.35.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-force-graph-2d": "^1.29.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.12.0",
     "rss-parser": "^3.13.0",
